--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@
 }
 
 .main_css{
-  padding-top: 328px;
+  padding-top: 316px;
   background-color: #f2f2f2;
 }
 
@@ -71,12 +71,11 @@
 }
 
 .title_text{
-  margin-top: 0;
   text-align: center;
-  margin-top: 20px;
   font-size: 90px;
   font-weight: 700;
   color: #74cfae;
+  margin-bottom: 20px;
 }
 
 .subtitle_text{
